<resources xmlns:About="http://schemas.android.com/tools">
    <string name="app_name">Gate</string>
    <string name="prof_name">GATE</string>
    <string name="Address">gate4ru@gmail.com</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="userdata">UserName/Email/MobNo</string>
    <string name="mob_no">Mobile Number</string>
    <string name="signup">SignUp</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="area">Area/PINCode</string>
    <string name="offer">Services Offered</string>
    <string name="require">Services Required</string>
    <string name="email">Email ID</string>
    <string name="welcome_jeevan">Welcome Jeevan</string>
    <string name="hint_name">UserName</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_mob">Email/Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Register</string>
    <string name="btn_update">Update</string>
    <string name="save">Save</string>
    <string name="err_msg_name">Enter Valid User Input</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="neww">Not on Gate.?</string>
    <string name="reg">Register</string>
    <string name="home">Home</string>
    <string name="resend">ReSend OTP</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="title_activity_signup">Sign in</string>
    <string name="title_activity_forgotpsw">Forgot Password</string>
    <string name="remember">Remember Me</string>
    <string name="otp">Get OTP</string>
    <string name="valid">Validate OTP</string>
    <string name="or">OR</string>
    <string name="show">Show Password</string>
    <string name="agree">I Agree Terms And Condition</string>
    <string name="enter_otp">Enter OTP code</string>
    <string name="enter_otp_receive">Enter the code received</string>
    <string name="new_psw">Enter New Password</string>
    <string name="social">Login from social media</string>
    <string name="social1">Register with social media</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_personnel">Personnel Details</string>
    <string name="title_activity_offered">Services Offered</string>
    <string name="title_activity_required">Services Required</string>
    <string name="spinner_title">Services Offered</string>
    <string name="preferred_type">Preferred type</string>
    <string name="spinner_title1">Services Required</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="cost">Cost</string>
    <string name="duration">Duration</string>

    //array for services offered
    <string-array name="services_offered">
        <item>"Painting"</item>
        <item>"Plumbing"</item>
        <item>"Electrical"</item>
        <item>"Carpenter"</item>
        <item>"Interior"</item>
    </string-array>
    //array for services cost
    <string-array name="cost_details">
        <item>Per Hour</item>
        <item>Per Day</item>
    </string-array>
    //array for services required
    <string-array name="services_required">
        <item>"Painting"</item>
        <item>"Plumbing"</item>
        <item>"Electrical"</item>
        <item>"Carpenter"</item>
        <item>"Interior"</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search">Search</string>
    <string-array name="navigation_drawer_items_array">
        <item>Services Offered</item>
        <item>Services Required</item>
        <item>Places Visited</item>
        <item>Tools</item>
        <item>profile</item>
        <item>Share</item>
        <item>Rate Us</item>
        <item>Help</item>
    </string-array>

    <string name="description">About:Descriptions</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_places_visited">PlacesVisited</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
